feat(security): добавить tenant-scoped доступ для audit и usage
Добавлена роль SUPER_ADMIN для платформенного администрирования; ограничен доступ ADMIN к usage и audit рамками своей организации; добавлен organizationId в audit events; обновлена запись audit-событий в ChatService, UserService, OrganizationService и rate limit listener; расширен RateLimitExceededEvent полем organizationId; добавлены organization-scoped repository queries; обновлены security/unit tests под ADMIN/SUPER_ADMIN.